
  o Client Changes:
    * A potential race condition where an update could change the state
      of the Conary database while the rollback code is executing has
      been fixed. Note that as part of the fix for CNY-1591, the update
      and rollback operations cannot commit at the same time; the fix
      further ensures long-running operations detect the state change.
      (CNY-1624)


Changes in 1.1.25:
  o New Feature:
    * Conary now supports a "searchPath" configuration option, which
      operates like the installLabelPath configuration option but can
      contain both packages and labels.  For example:
      "searchPath group-os contrib.rpath.org@rpl:1" can be used to
      configure conary to first install the version of a package
      referenced in group-os, then to fall back to installing from
      contrib.rpath.org@rpl:1. (CNY-1571)

  o Build Changes:
    * GroupRecipe.add*Script now accepts a path to the script as the
      initial parameter.
    * r.addArchive() now supports a preserveOwnership parameter.  When
      set to True, owners and groups from cpio, rpm, and tar archives
      are used as the owners and groups in the final package.
      (CNY-927)
    * A new "cvc revert" command has been added that reverts any local
      changes made in the current directory. (CNY-1222)
    * GroupRecipe.addCopy() copies compatibility classes and group
      scripts onto to groups.  New copyScripts and
      copyCompatibilityScripts options to GroupRecipe.addCopy() and
      GroupRecipe.addAll() can be used to change this
      behavior. (CNY-1642)
    * A new build r.IncludeLicense() action has been added. This build
      action will take either a directory structure of licenses or a
      single license file, normalize its contents, and place it in a
      directory in /usr/share/known-licenses, which will be used at a
      later date by conary-policy.  This method is only useful for